# convolution

./: .gitignore  CMakeLists.txt  Makefile  README.md  package-lock.json  package.json
audio/: list.php
scripts/: build-c.sh  build-fortran.sh  build-gfortran.sh  build.sh  deploy.sh  setup-emscripten.sh
src/c/: convolution_engine.c  wasm_bridge.c  wasm_bridge.h
src/fortran/: constants.f90  convolution_reverb.f90  fft_module.f90  impulse_response.f90
src/js/: audio-processor.js  convolution-module.js  convolution-worklet.js
web/: app.js  index.html  style.css
